Fix contrast issue with jetpack subscription message.

--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -97,6 +97,13 @@
 	}
 }
 
+.jetpack_subscription_widget {
+	.error {
+		background-color: $color__background-pre;
+		padding: $size__spacing-unit;
+	}
+}
+
 #secondary {
 	section:first-child,
 	section:first-child > div {
